--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-            <button class="btn"> <a href="#" >x</a></button>
+            <button class="btn"> <a href="https://soly-f.github.io/FSA-GAMES-F/" >x</a></button>
             <div class="title">Contact</div>
             <h1>lifelife50@yahoo.com</h1>
             
