--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-            <button class="btn"> <a href="https://soly-f.github.io/FSA-GAMES-F/" >x</a></button>
+            <button class="btn"> <a href="https://games-fsaf.netlify.app/" >x</a></button>
             <div class="title">Contact</div>
             <h1>lifelife50@yahoo.com</h1>
             
